--- a/static/lang/nl-nl.json
+++ b/static/lang/nl-nl.json
@@ -2,7 +2,7 @@
 	"languageName": "Nederlands (NL)",
 	"translatedLanguageName": "Dutch (NL)",
 	"flag": "nl",
-	"author": "Computernewb",
+	"author": "neils_1108",
 
 	"stringKeys": {
 		"kGeneric_CollabVM": "CollabVM",
