--- a/static/lang/nl-nl.json
+++ b/static/lang/nl-nl.json
@@ -24,51 +24,51 @@
 		"kGeneric_Logout": "Uitloggen",
 		
 		"kWelcomeModal_Header": "Welkom bij CollabVM",
-		"kWelcomeModal_Body": "<p>Before continuing, please familiarize yourself with our rules:</p> <h3>R1. Don't break the law.</h3> Do not use CollabVM or CollabVM's network to violate United States federal law, New York state law, or international law. If CollabVM becomes aware a crime has been committed through its service, you will be immediately banned, and your activities may be reported to the authorities if necessary.<br><br>CollabVM is required by law to notify law enforcement agencies if it becomes aware of the presence of child pornography on, or being transmitted through its network.<br><br>COPPA is also enforced, please do not use CollabVM if you are under the age of 13 years old. <h3>R2. No running DoS/DDoS tools.</h3> Do not use CollabVM to DoS/DDoS an indivdiual, business, company, or anyone else. <h3>R3. No spam distribution.</h3> Do not spam any emails using this service or push spam in general. <h3>R4. Do not abuse any exploits.</h3> Do not abuse any exploits, additionally if you see someone abusing exploits or you need to report one, please contact me at: computernewbab@gmail.com <h3>R5. Don't impersonate other users.</h3> Do not impersonate other members of CollabVM. If caught, you'll be temporarily disconnected, and banned if necessary. <h3>R6. One vote per person.</h3> Do not use any methods or tools to bypass the vote restriction. Only one vote per person is allowed, no matter what. Anybody who is caught doing this will be banned. <h3>R7. No Remote Administration Tools.</h3> Do not use any remote administration tools (ex: DarkComet, NanoCore, Anydesk, TeamViewer, Orcus, etc.) <h3>R8. No bypassing CollabNet.</h3> Do not attempt to bypass the blocking provided by CollabNet, especially if it is being used to break Rule 1, Rule 2, or Rule 7 (or run stupid over-used things). <h3>R9. No performing destructive actions constantly.</h3> Any user may not destroy the VM (rendering it unusable constantly), install/reinstall the operating system (except on VM7 or VM8), or run bots that do such. This includes bots that spam massive amounts of keyboard/mouse input (\"kitting\"). <h3>R10. No Cryptomining</h3> Attempting to mine cryptocurrency on the VMs will result in a kick, and then a permanent ban if you keep attempting. Besides, it's not like you're gonna make any money off it. <h3>NSFW Warning</h3> Please note that NSFW content is allowed on our anarchy VM (VM0b0t), and is viewed regularly. In addition, while we give a good effort to keep NSFW off the main VMs, people will occasionally slip it through.",
+		"kWelcomeModal_Body": "<p>Voordat u verdergaat, maakt u zich alstublieft vertrouwd met onze regels:</p> <h3>R1. Overtreed de wet niet.</h3> Gebruik CollabVM of het netwerk van CollabVM niet om de federale wetgeving van de Verenigde Staten, de wetgeving van de staat New York of de internationale wetgeving te overtreden. Als CollabVM zich ervan bewust wordt dat er een misdrijf is gepleegd via de dienst, wordt u onmiddellijk verbannen en kunnen uw activiteiten indien nodig aan de autoriteiten worden gemeld.<br><br> CollabVM is wettelijk verplicht om wetshandhavingsinstanties op de hoogte te stellen als het zich bewust wordt van de aanwezigheid van kinderpornografie op, of via zijn netwerk verspreid.<br><br> COPPA wordt ook gehandhaafd, gebruik CollabVM niet als u jonger bent dan 13 jaar. <h3>R2. Geen DoS/DDoS-tools uitvoeren.</h3> Gebruik CollabVM niet om een individu, bedrijf of organisatie aan te vallen met een DoS/DDoS-aanval. <h3>R3. Geen spamverspreiding.</h3> Gebruik deze service niet om spam-e-mails te versturen of om op enige manier spam te verspreiden. <h3>R4. Maak geen misbruik van exploits.</h3> Maak geen misbruik van exploits. Als u iemand ziet die exploits misbruikt of als u er een moet melden, neem dan contact met mij op via: computernewbab@gmail.com <h3>R5. Doe u niet voor als andere gebruikers.</h3> Doe u niet voor als andere leden van CollabVM. Als u wordt betrapt, wordt u tijdelijk verbannen en indien nodig permanent verbannen. <h3>R6. Eén stem per persoon.</h3> Gebruik geen methoden of tools om de stembeperking te omzeilen. Slechts één stem per persoon is toegestaan, ongeacht wat. Iedereen die wordt betrapt, wordt verbannen. <h3>R7. Geen Remote Administration Tools.</h3> Gebruik geen remote administration tools (bijv. DarkComet, NanoCore, Anydesk, TeamViewer, Orcus, etc.). <h3>R8. Niet CollabNet omzeilen.</h3> Probeer de blokkades van CollabNet niet te omzeilen, vooral niet als dit wordt gedaan om Regel 1, Regel 2 of Regel 7 te overtreden (of om zinloze, veelgebruikte dingen uit te voeren). <h3>R9. Geen constante destructieve acties uitvoeren.</h3> Geen enkele gebruiker mag de VM constant vernietigen (waardoor deze onbruikbaar wordt), het besturingssysteem installeren/herinstalleren (behalve op VM7 of VM8) of bots uitvoeren die dit doen. Dit geldt ook voor bots die enorme hoeveelheden toetsenbord/muisinvoer spammen (\"kitting\"). <h3>R10. Geen cryptomining.</h3> Pogingen om cryptovaluta te minen op de VMs zullen resulteren in een verwijdering, en bij herhaaldelijke pogingen in een permanente ban. Bovendien zult u er toch geen geld mee verdienen. <h3>NSFW Waarschuwing</h3> Houd er rekening mee dat NSFW-inhoud is toegestaan op onze anarchie-VM (VM0b0t) en regelmatig wordt bekeken. Daarnaast doen we ons best om NSFW-inhoud van de hoofd-VM's te weren, maar soms glipt er iets doorheen. ",
 
-		"kSiteButtons_Home": "Home",
+		"kSiteButtons_Home": "Thuis",
 		"kSiteButtons_FAQ": "FAQ",
-		"kSiteButtons_Rules": "Rules",
+		"kSiteButtons_Rules": "Regels",
 		"kSiteButtons_DarkMode": "Donkere Modus",
 		"kSiteButtons_LightMode": "Lichte Modus",
 		"kSiteButtons_Languages": "Talen",
 
-		"kVM_UsersOnlineText": "Users Online:",
+		"kVM_UsersOnlineText": "Gebruikers Online:",
 
-		"kVM_TurnTimeTimer": "Turn expires in {0} seconds.",
-		"kVM_WaitingTurnTimer": "Waiting for turn in {0} seconds.",
-		"kVM_VoteCooldownTimer": "Please wait {0} seconds before starting another vote.",
+		"kVM_TurnTimeTimer": "De beurt verloopt over {0} seconden.",
+		"kVM_WaitingTurnTimer": "Wacht op volgende beurt in {0} seconden.",
+		"kVM_VoteCooldownTimer": "Wacht {0} seconden voordat u opnieuw gaat stemmen.",
 
-		"kVM_VoteForResetTitle": "Do you want to reset the VM?",
-		"kVM_VoteForResetTimer": "Vote ends in {0} seconds",
+		"kVM_VoteForResetTitle": "Wilt u de VM opnieuw instellen?",
+		"kVM_VoteForResetTimer": "De stemming eindigt over {0} seconden",
 
-		"kVMButtons_TakeTurn": "Take Turn",
-		"kVMButtons_EndTurn": "End Turn",
-		"kVMButtons_ChangeUsername": "Change Username",
+		"kVMButtons_TakeTurn": "Neem beurt",
+		"kVMButtons_EndTurn": "Eindig beurt",
+		"kVMButtons_ChangeUsername": "Wijzig gebruikersnaam",
 		"kVMButtons_Keyboard": "Keyboard",
 		"KVMButtons_CtrlAltDel": "Ctrl+Alt+Del",
 
-		"kVMButtons_VoteForReset": "Vote For Reset",
-		"kVMButtons_Screenshot": "Screenshot",
+		"kVMButtons_VoteForReset": "Stem Voor Opnieuw Instellen",
+		"kVMButtons_Screenshot": "Schermafbeelding",
 
 		"kQEMUMonitor": "QEMU Monitor",
-		"kAdminVMButtons_PassVote": "Pass Vote",
-		"kAdminVMButtons_CancelVote": "Cancel Vote",
+		"kAdminVMButtons_PassVote": "Stemming Aangenomen",
+		"kAdminVMButtons_CancelVote": "Stemming Annuleren",
 
-		"kAdminVMButtons_Restore": "Restore",
-		"kAdminVMButtons_Reboot": "Reboot",
+		"kAdminVMButtons_Restore": "Herstel",
+		"kAdminVMButtons_Reboot": "Herstart",
 		"kAdminVMButtons_ClearTurnQueue": "Clear Turn Queue",
-		"kAdminVMButtons_BypassTurn": "Bypass Turn",
-		"kAdminVMButtons_IndefiniteTurn": "Indefinite Turn",
-		"kAdminVMButtons_GhostTurnOn": "Ghost Turn (On)",
-		"kAdminVMButtons_GhostTurnOff": "Ghost Turn (Off)",
+		"kAdminVMButtons_BypassTurn": "Omzeil Beurt",
+		"kAdminVMButtons_IndefiniteTurn": "Onbepaalde Beurt",
+		"kAdminVMButtons_GhostTurnOn": "Ghost Beurt (Aan)",
+		"kAdminVMButtons_GhostTurnOff": "Ghost Beurt (Uit)",
 
 		"kAdminVMButtons_Ban": "Ban",
 		"kAdminVMButtons_Kick": "Kick",
-		"kAdminVMButtons_TempMute": "Temporary Mute",
-		"kAdminVMButtons_IndefMute": "Indefinite Mute",
-		"kAdminVMButtons_Unmute": "Unmute",
-		"kAdminVMButtons_GetIP": "Get IP",
+		"kAdminVMButtons_TempMute": "Tijdelijke Demp",
+		"kAdminVMButtons_IndefMute": "Eeuwige Demp",
+		"kAdminVMButtons_Unmute": "Undemp",
+		"kAdminVMButtons_GetIP": "Krijg IP",
 
 		"kVMPrompts_AdminChangeUsernamePrompt": "Enter new username for {0}:",
 		"kVMPrompts_AdminRestoreVMPrompt": "Are you sure you want to restore the VM?",
